plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "io.freefair.lombok" version '8.0.1'
}

group 'com.valantic.sti'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.valantic.sti.tutorial'
    mainClass = 'com.valantic.sti.tutorial.Main'
    applicationDefaultJvmArgs = [
            '--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls'
    ]
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation group: 'org.slf4j', name: 'slf4j-api', version: "${slf4j}"
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: "${slf4j}"
    implementation group: 'org.controlsfx', name: 'controlsfx', version: "${controlsfx}"
    implementation group: 'net.synedra', name: 'validatorfx', version: "${validatorfx}"
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${commonslang3}"
}
